@@ -1,5 +1,0 @@
-[Desktop Entry]
-_Name=Universal Access
-_Comment=Universal access related preferences
-Icon=preferences-desktop-accessibility
-Type=Directory
