@@ -11,7 +11,6 @@ desktop-directories/LookAndFeel.directory.in
 desktop-directories/Network.directory.in
 desktop-directories/Office.directory.in
 desktop-directories/Personal.directory.in
-desktop-directories/Settings-Accessibility.directory.in
 desktop-directories/Settings-System.directory.in
 desktop-directories/Settings.directory.in
 desktop-directories/System.directory.in
