@@ -1,5 +1,9 @@
 2008-04-17  Vincent Untz  <vuntz@gnome.org>
 
+	* po/POTFILES.in: updated.
+
+2008-04-17  Vincent Untz  <vuntz@gnome.org>
+
 	* po/POTFILES.in: update after file renaming
 
 2008-04-16  Gintautas Miliauskas  <gintas@akl.lt>
